# ban-controller-api

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  docker-compose.yml  entry.sh
docs/: APISPEC.md
migrations/2023-01-16-173020_registered_servers/: down.sql  up.sql
migrations/2023-01-19-121928_bans/: down.sql  up.sql
src/: database.rs  error.rs  main.rs  middleware.rs  models.rs  schema.rs
src/api/: ban.rs  key.rs  mod.rs
