[package]
authors = ["fait"]
name = "ban-controller-api"
version = "1.0.0-beta"
edition = "2021"

[dependencies]
actix-service = "2.0.2"
actix-web = "4.2.1"
argon2 = "0.4.1"
diesel = { version = "2.0.2", features = ["mysql", "r2d2", "serde_json"] }
diesel_cli = { version = "2.0.1", default-features = false, features = ["mysql"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.25"
serde = "1.0.152"
serde_json = "1.0.91"
thiserror = "1.0.38"
uuid = { version = "1.2.2", features = ["v4"] }
